Fixed overflow issue

--- a/scss/shame.scss
+++ b/scss/shame.scss
@@ -1,5 +1,6 @@
 body{
 	font-family: $worksans;
+	overflow-x: hidden;
 }
 
 .hero{
